# teracron-sdk

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PLAN_WORKFLOW_TRACING.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
teracron/: .agent-skill.md  __init__.py  apikey.py  auth.py  cli.py  client.py  collector.py  config.py  crypto.py  encoder.py  query.py  simulate.py  transport.py  types.py
teracron/tracing/: .agent-skill.md  __init__.py  context.py  decorator.py  events.py  sampling.py  span.py
teracron/tracing/middleware/: __init__.py  celery.py  django.py  fastapi.py
tests/: test_apikey.py  test_auth.py  test_cli_commands.py  test_client.py  test_collector.py  test_config.py  test_crypto.py  test_encoder.py  test_events.py  test_middleware_celery.py  test_middleware_django.py  test_middleware_fastapi.py  test_phase2_capture.py  test_phase2_nesting.py  test_phase3_config.py  test_query.py  test_sampling.py  test_sampling_integration.py  test_scrubber.py  test_security_hardening.py  test_simulate.py  test_span.py  test_trace_buffer.py  test_trace_config.py  test_trace_context.py  test_trace_decorator.py  test_transport.py
